ecmascript/parser/tests/test262-error-references/fail/113749707e7c3519.js.stderr
error: Expected a binary digit
 --> $DIR/tests/test262-parser/fail/113749707e7c3519.js:1:3
  |
1 | 0B9
  |   ^

